--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,18 +1,17 @@
----
-  apiVersion: v1
-  kind: Service
-  metadata:
-    name: mobile-simulator-service
-    labels:
-      app: mobile-simulator
-  spec:
-    ports:
-      - port: 80
-        protocol: TCP
-        targetPort: 8080
-    type: LoadBalancer
-    selector:
-      app: mobile-simulator
+apiVersion: v1
+kind: Service
+metadata:
+  name: mobile-simulator-service
+  labels:
+    app: mobile-simulator
+spec:
+  ports:
+    - port: 80
+      protocol: TCP
+      targetPort: 8080
+  type: LoadBalancer
+  selector:
+    app: mobile-simulator
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -32,7 +31,7 @@ spec:
         app: mobile-simulator
     spec:
       containers:
-        - image: mobile-simulator-service:1.0
+        - image: IMAGE_NAME
           imagePullPolicy: Always
           name: mobile-simulator
           envFrom:
@@ -43,9 +42,8 @@ spec:
               value: '8080'
           ports:
             - containerPort: 8080
-
 ---
-apiVersion: route.openshift.io/v1
+apiVersion: v1
 kind: Route
 metadata:
   name: mobile-simulator-service
@@ -53,4 +51,3 @@ spec:
   to:
     kind: Service
     name: mobile-simulator-service
-
