--- a/bank-app-backend/transaction-service/deployment.yaml
+++ b/bank-app-backend/transaction-service/deployment.yaml
@@ -49,7 +49,7 @@ spec:
   selector:
     app: transaction-service
 ---
-apiVersion: v1
+apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: transaction-service
